# THE_RENDERER

./: .gitignore  CMakeLists.txt  main.cpp
docs/: STATUS.md
shaders/: triangle.vert
src/: BVH.cpp  BVH.h  Camera.h  Entity.h  IDRegistry.h  PhysicsInterface.h  Renderer.cpp  Renderer.h  Scene.h
src/initializer/: Initializer.h
src/initializer/objects/: objects.h
src/scf/: SCFNode.h  SCFParser.h
